# TriggerSwitch

./: .gitignore  README.md
firmware/: Makefile  TriggerSwitch.atsln  TriggerSwitch.c  TriggerSwitch.componentinfo.xml  TriggerSwitch.cproj  usb_rawhid.c
firmware/include/: usbpacket.h
hostconsole/: CMakeLists.txt  consoleapp.cpp  hid-libusb.c  hid-macosx.c  usb_hid_exception.h  usb_hid_raw.cpp  usb_hid_raw.h  usbpacket.h
hostconsole/cmake/: FindCoreFoundation.cmake
